# ScaleX-POD-mini

./: .editorconfig  .gitignore  .yamllint.yml  CLAUDE.md  DASHBOARD.md  PROMPT.md  README.md  REQUEST-TO-USER.md  install.sh  playbox  values.yaml
.github/: dependabot.yml
.legacy-gitops-apps/: bootstrap-app-proj.yaml
.legacy-tofu/: outputs.tf
ansible/: prepare-nodes.yml
client/: kubeconfig-oidc.yaml.j2  setup-client.sh
config/: baremetal.yaml.example  k8s-clusters.yaml  k8s-clusters.yaml.example  known_degradations.yaml  sdi-specs.yaml  sdi-specs.yaml.example
credentials/: .baremetal-init.yaml.example  .env.example  README.md  (+2 more)
scalex-cli/: Cargo.toml
scalex-cli/src/: main.rs
scalex-cli/src/commands/: bootstrap.rs  cluster.rs  dash.rs  facts.rs  get.rs  kernel_tune.rs  mod.rs  plan.rs  sdi.rs  secrets.rs  status.rs  tunnel.rs  validate.rs
scalex-cli/src/core/: config.rs  error.rs  gitops.rs  host_prepare.rs  kernel.rs  kubespray.rs  mod.rs  placement.rs  resource_planner.rs  resource_pool.rs  secrets.rs  ssh.rs  sync.rs  tofu.rs  validation.rs
scalex-cli/src/dash/: app.rs  command_mode.rs  container_selector.rs  data.rs  degradation.rs  dynamic_resource.rs  event.rs  filter.rs  help_overlay.rs  infra.rs  infra_view.rs  keybinding_registry.rs  kube_client.rs  log_viewer.rs  mod.rs  pod_exec.rs  port_detect.rs  port_forward.rs  port_picker.rs  resource_registry.rs  resource_watcher.rs  sa_provisioner.rs  theme.rs  toast.rs  tui_suspend.rs  ui.rs  yaml_modal.rs
scalex-cli/src/models/: baremetal.rs  cluster.rs  degradation.rs  mod.rs  sdi.rs
(+181 files in other folders)
